# todo-list-clean-architecture

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
docker-compose/: app.yaml  storages.yaml
modules/application/repositories_adaptors/: category_repo_adapter.py  task_repo_adapter.py
modules/application/services_adaptors/: category_services_adapter.py  task_services_adapter.py
modules/domain/repositories/: category_repo.py  task_repo.py
modules/domain/services/: category_services.py  task_services.py
modules/entities/: Task.py
modules/infrastructure/src/: asgi.py  settings.py  urls.py  wsgi.py
modules/infrastructure/task/: admin.py  apps.py  models.py  task_repo_web.py
modules/presentation/api/: urls.py
modules/presentation/api/v1/: urls.py
modules/presentation/api/v1/task/: handlers.py  schemas.py
